// Database Schema for Enterprise Management System
// Generated from SQLAlchemy models

Table employees {
  employee_id integer [primary key, increment]
  email varchar [unique, not null]
  username varchar [unique, not null]
  password varchar [not null]
  name varchar [not null]
  role varchar [not null]
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  deleted_at datetime
  created_at datetime [default: `now()`]
  
  indexes {
    (email)
    (username)
  }
}

Table employee_info {
  employee_info_id integer [primary key, increment]
  employee_id integer [null, ref: > employees.employee_id]
  name varchar [not null]
  employee_number varchar [unique]
  team varchar
  position varchar
  business_unit varchar
  branch varchar
  contact_number varchar
  base_salary integer
  incentive_pay integer
  avg_monthly_budget integer
  latest_evaluation varchar
  responsibilities varchar
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  
  indexes {
    (employee_id)
    (employee_number)
  }
}

Table customers {
  customer_id integer [primary key, increment]
  customer_name varchar [not null]
  address varchar
  doctor_name varchar
  total_patients integer
  customer_grade varchar
  notes varchar
  is_deleted boolean [default: false]
  deleted_at datetime
  created_at datetime [default: `now()`]
  
  indexes {
    (customer_name, address) [unique]
  }
}

Table products {
  product_id integer [primary key, increment]
  product_name varchar [not null]
  description varchar
  category varchar
  is_active boolean [default: true]
}

Table sales_records {
  record_id integer [primary key, increment]
  employee_id integer [null, ref: > employee_info.employee_info_id]
  customer_id integer [null, ref: > customers.customer_id]
  product_id integer [null, ref: > products.product_id]
  sale_amount decimal(15,2) [not null]
  sale_date date [not null]
  
  indexes {
    (employee_id)
    (customer_id)
    (product_id)
    (sale_date)
  }
}

Table interaction_logs {
  log_id integer [primary key, increment]
  employee_id integer [not null, ref: > employee_info.employee_info_id]
  customer_id integer [not null, ref: > customers.customer_id]
  interaction_type varchar
  summary varchar
  sentiment varchar
  compliance_risk varchar
  interacted_at datetime
  
  indexes {
    (employee_id)
    (customer_id)
    (interacted_at)
  }
}

Table documents {
  doc_id integer [primary key, increment]
  uploader_id integer [not null, ref: > employees.employee_id]
  doc_title varchar [not null]
  doc_type varchar
  file_path varchar [not null]
  version varchar
  created_at datetime [default: `now()`]
  
  indexes {
    (uploader_id)
    (doc_type)
  }
}

Table document_relations {
  relation_id integer [primary key, increment]
  doc_id integer [not null, ref: > documents.doc_id]
  related_entity_type varchar [not null]
  related_entity_id integer [not null]
  confidence_score integer [default: 100]
  created_at datetime [default: `now()`]
  
  indexes {
    (doc_id, related_entity_type, related_entity_id) [unique]
    (related_entity_type, related_entity_id)
  }
}

Table chat_sessions {
  session_id varchar(255) [primary key]
  employee_id integer [not null, ref: > employees.employee_id]
  session_title varchar(500)
  created_at datetime [not null, default: `now()`]
  last_activity datetime [not null, default: `now()`]
  is_archived boolean [default: false]
  archived_at datetime
  
  indexes {
    (employee_id)
    (created_at)
  }
}

Table chat_history {
  message_id varchar(36) [primary key]
  session_id varchar(255) [not null, ref: > chat_sessions.session_id]
  employee_id integer [not null, ref: > employees.employee_id]
  role varchar(20) [not null]
  message_text text [not null]
  expires_at datetime
  created_at datetime [not null, default: `now()`]
  
  indexes {
    (session_id)
    (employee_id)
    (created_at)
  }
}

Table system_trace_logs {
  trace_id bigint [primary key, increment]
  message_id varchar(36) [not null, ref: > chat_history.message_id]
  event_type varchar
  log_data jsonb
  latency_ms integer
  created_at datetime [not null, default: `now()`]
  
  indexes {
    (message_id)
    (event_type)
    (created_at)
  }
}

Table assignment_map {
  assignment_id integer [primary key, increment]
  employee_id integer [not null, ref: > employee_info.employee_info_id]
  customer_id integer [not null, ref: > customers.customer_id]
  
  indexes {
    (employee_id, customer_id) [unique]
    (employee_id)
    (customer_id)
  }
}

// New Tables Added

Table branches {
  branch_id integer [primary key, increment]
  headquarters varchar(100) [not null]
  department varchar(100) [not null]
  branch_name varchar(100) [not null, unique]
  contact_number varchar(20)
  status varchar(20) [default: "active"]
  notes varchar(500)
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (branch_id)
    (branch_name)
  }
}

Table customer_monthly_status {
  status_record_id integer [primary key, increment]
  customer_id integer [not null, ref: > customers.customer_id]
  year_month varchar [not null]
  patient_count integer [not null, default: 0]
  used_budget decimal(15,2)
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  
  indexes {
    (customer_id, year_month) [unique]
  }
}

Table employee_performance {
  performance_id integer [primary key, increment]
  employee_id integer [not null, ref: > employee_info.employee_info_id]
  year_month date [not null]
  target_amount float [not null, default: 0.0]
  notes varchar(500)
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (employee_id, year_month) [unique]
    (performance_id)
  }
}

Table insurance_recognition_criteria {
  criteria_id integer [primary key, increment]
  product_id integer [ref: > products.product_id]
  criteria_code varchar(50)
  criteria_name varchar(200) [not null]
  description text
  requirements jsonb
  coverage_amount decimal(15,2)
  effective_from date
  effective_to date
  status varchar(50) [default: "active"]
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (criteria_code, criteria_name) [unique]
  }
}

Table laws {
  law_id integer [primary key, increment]
  title varchar(1000) [not null]
  law_number varchar(100)
  content text
  article varchar(100)
  url varchar(1000)
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (law_number, article) [unique]
  }
}

Table news {
  news_id integer [primary key, increment]
  title varchar(1000) [not null]
  content text
  news_type enum [not null]
  source varchar(200)
  author varchar(100)
  published_date date
  url varchar(1500) [unique]
  tags jsonb
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (url)
  }
}

Table news_strategy_reports {
  report_id integer [primary key, increment]
  title varchar(500) [not null]
  content text
  created_by integer [ref: > employees.employee_id]
  created_at datetime [default: `now()`]
}

Table news_strategy_report_references {
  id integer [primary key, increment]
  report_id integer [not null, ref: > news_strategy_reports.report_id]
  news_id integer [not null, ref: > news.news_id]
  reference_type varchar(50)
  notes text
  created_at datetime [default: `now()`]
  
  indexes {
    (report_id, news_id) [unique]
  }
}

Table schedules {
  schedule_id integer [primary key, increment]
  employee_id integer [not null, ref: > employees.employee_id]
  title varchar(200) [not null]
  location varchar(200) [not null]
  contact_person varchar(100) [not null]
  schedule_date date [not null]
  schedule_time time [not null]
  duration varchar(50)
  schedule_type enum [not null, default: "방문"]
  status enum [not null, default: "예정"]
  memo text
  created_at datetime [default: `now()`]
  updated_at datetime
  
  indexes {
    (employee_id)
  }
}

Table table_descriptions {
  id integer [primary key, increment]
  table_name varchar [not null, unique]
  description text [not null]
  columns jsonb
  sample_data jsonb
  embedding vector(1536) [not null]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  
  indexes {
    (table_name)
  }
}

// Materialized Views (for reference)
Table customer_monthly_performance_mv {
  performance_id integer [primary key]
  customer_id integer [ref: > customers.customer_id]
  year_month varchar
  monthly_sales integer
  budget_used integer
  visit_count integer
  
  indexes {
    (customer_id)
    (year_month)
  }
}

Table employee_performance_mv {
  employee_id integer [primary key]
  year_month date [primary key]
  employee_name varchar
  employee_number varchar
  target_amount float
  actual_sales float
  achievement_rate float
  sales_count integer
  customer_count integer
  
  indexes {
    (employee_id, year_month)
  }
}

// Relationships
Ref: employees.employee_id < employee_info.employee_id
Ref: employees.employee_id < documents.uploader_id
Ref: employees.employee_id < chat_sessions.employee_id
Ref: employees.employee_id < chat_history.employee_id
Ref: employees.employee_id < schedules.employee_id
Ref: employees.employee_id < news_strategy_reports.created_by
Ref: employee_info.employee_info_id < sales_records.employee_id
Ref: employee_info.employee_info_id < interaction_logs.employee_id
Ref: employee_info.employee_info_id < assignment_map.employee_id
Ref: employee_info.employee_info_id < employee_performance.employee_id
Ref: customers.customer_id < sales_records.customer_id
Ref: customers.customer_id < interaction_logs.customer_id
Ref: customers.customer_id < assignment_map.customer_id
Ref: customers.customer_id < customer_monthly_status.customer_id
Ref: products.product_id < sales_records.product_id
Ref: products.product_id < insurance_recognition_criteria.product_id
Ref: documents.doc_id < document_relations.doc_id
Ref: chat_sessions.session_id < chat_history.session_id
Ref: chat_history.message_id < system_trace_logs.message_id
Ref: news.news_id < news_strategy_report_references.news_id
Ref: news_strategy_reports.report_id < news_strategy_report_references.report_id